# marimo-demo

./: .gitignore  Local_LLM_Setup.md  README.md  broken_state_notebook.ipynb  marimo-demo.py  marimo_demo.py  pixi.toml  pyproject.toml  test-marimo-demo.py  test_marimo_demo.py
__marimo__/session/: marimo-demo.py.json  marimo_demo_notebook.py.json  new_notebook.py.json
