[project]
name = "marimo-demo"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Henry Cuzco", email = "40706933+hfactor13@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.3.3,<3",
    "matplotlib>=3.10.6,<4",
    "marimo>=0.20.2,<0.21",
    "altair>=5.5.0,<6",
    "pandas>=2.3.3,<3",
    "seaborn>=0.13.2,<0.14",
    "duckdb>=1.3.2,<2",
    "sqlglot>=27.20.0,<28",
    "pyarrow>=21.0.0,<22"
]

[tasks]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
marimo-demo = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
jupyterlab = ">=4.5.4,<5"
ipywidgets = ">=8.1.8,<9"
pytest = ">=9.0.2,<10"
